syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "internal/proto/product.proto";

option go_package = "github.com/danielgyu/go-ecommerce/internal/proto";

service OrderServcie {
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse) {}
    rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse) {}
    rpc OrderInCart(OrderInCartRequest) returns (OrderInCartResponse) {}

    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
	option (google.api.http) = {
	    get: "/order/health"
	};
    }
}

message AddToCartRequest {
    string token = 1;
    repeated int64 productId = 2;
}

message AddToCartResponse {
    int64 addedItems = 1;
}

message RemoveFromCartRequest {
    string token = 1;
    int64 cartId = 2;
}

message RemoveFromCartResponse {
    bool success = 1;
}

message OrderInCartRequest {
    int64 cartId = 1;
}

message OrderInCartResponse {
    bool success = 1;
}
